// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Issue Query Command - Help Text 1`] = `
"stdout:
"Usage: issue query|q [options]

Query issues with structured filters

Options:
  --search <term>                 Full-text search term
  --search-comments               Also search inside issue comments (requires
                                  --search)
  --team <team>                   Filter by team key (can be repeated for
                                  multiple teams)
  --all-teams                     Query across all teams
  -s, --state <state>             Filter by issue state (can be repeated for
                                  multiple states)
  --all-states                    Show issues from all states (this is the
                                  default)
  --assignee <assignee>           Filter by assignee (username)
  -A, --all-assignees             Show issues for all assignees (this is the
                                  default)
  -U, --unassigned                Show only unassigned issues
  --sort <sort>                   Sort order: manual or priority (default:
                                  priority, not available with --search)
                                  (choices: "manual", "priority")
  --project <project>             Filter by project name
  --project-label <projectLabel>  Filter by project label name (shows issues
                                  from all projects with this label)
  --cycle <cycle>                 Filter by cycle name, number, or 'active'
  --milestone <milestone>         Filter by project milestone name (requires
                                  --project)
  -l, --label <label>             Filter by label name (can be repeated for
                                  multiple labels)
  --limit <n>                     Maximum number of issues to fetch (default:
                                  50, use 0 for unlimited) (default: 50)
  --created-after <date>          Filter issues created after this date (ISO
                                  8601 or YYYY-MM-DD)
  --updated-after <date>          Filter issues updated after this date (ISO
                                  8601 or YYYY-MM-DD)
  --include-archived              Include archived issues
  -j, --json                      Output results as JSON
  --no-pager                      Disable automatic paging for long output
  -h, --help                      display help for command
"
stderr:
"""
`;

exports[`Issue Query Command - JSON Output 1`] = `
"stdout:
"{
  "nodes": [
    {
      "id": "issue-1",
      "identifier": "ENG-101",
      "title": "Fix login bug",
      "url": "https://linear.app/test/issue/ENG-101/fix-login-bug",
      "priority": 2,
      "priorityLabel": "High",
      "estimate": 3,
      "createdAt": "2026-04-01T10:00:00.000Z",
      "updatedAt": "2026-04-02T08:15:00.000Z",
      "state": {
        "id": "state-1",
        "name": "In Progress",
        "color": "#f2c94c",
        "type": "started"
      },
      "assignee": {
        "id": "user-1",
        "name": "jane.smith",
        "displayName": "Jane Smith",
        "initials": "JS"
      },
      "team": {
        "id": "team-1",
        "key": "ENG",
        "name": "Engineering"
      },
      "project": {
        "id": "project-1",
        "name": "Auth Improvements"
      },
      "projectMilestone": null,
      "cycle": null,
      "labels": {
        "nodes": [
          {
            "id": "label-1",
            "name": "Bug",
            "color": "#eb5757"
          }
        ]
      },
      "inverseRelations": {
        "nodes": []
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": "cursor-1"
  }
}
"
stderr:
"""
`;

exports[`Issue Query Command - Search JSON Output 1`] = `
"stdout:
"{
  "nodes": [
    {
      "id": "issue-1",
      "identifier": "ENG-101",
      "title": "Fix login bug",
      "url": "https://linear.app/test/issue/ENG-101/fix-login-bug",
      "priority": 2,
      "priorityLabel": "High",
      "estimate": 3,
      "createdAt": "2026-04-01T10:00:00.000Z",
      "updatedAt": "2026-04-02T08:15:00.000Z",
      "state": {
        "id": "state-1",
        "name": "In Progress",
        "color": "#f2c94c",
        "type": "started"
      },
      "assignee": {
        "id": "user-1",
        "name": "jane.smith",
        "displayName": "Jane Smith",
        "initials": "JS"
      },
      "team": {
        "id": "team-1",
        "key": "ENG",
        "name": "Engineering"
      },
      "project": {
        "id": "project-1",
        "name": "Auth Improvements"
      },
      "projectMilestone": null,
      "cycle": null,
      "labels": {
        "nodes": [
          {
            "id": "label-1",
            "name": "Bug",
            "color": "#eb5757"
          }
        ]
      },
      "inverseRelations": {
        "nodes": []
      },
      "metadata": {
        "context": {},
        "score": 0.42
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": "cursor-1"
  },
  "totalCount": 1
}
"
stderr:
"""
`;
